pMachine/src/Machine/PascalParser.java
// Generated from /home/jordan/Desktop/Etudes/Master/Semestre2/Compilation/Compilation/pMachine/src/Machine/Pascal.g4 by ANTLR 4.7.2
package Machine;

    import Instructions.Comparaisons.*;
    import Instructions.Internes.*;
    import Instructions.Operations.*;
    import Instructions.OpBools.*;
    import Instructions.Instruction;
    import TablesSymboles.Types.*;
	import TablesSymboles.Types.Boolean;
	import TablesSymboles.Data;
    import Exceptions.*;
    import static Machine.Program.*;
    import java.util.Arrays;
	import static Machine.Main.printSymbolTable;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, TRUE=49, FALSE=50, ID=51, TYPE=52, INT=53, 
		WS=54, COMMENT=55;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_defprocs = 2, RULE_defproc = 3, 
		RULE_defparams = 4, RULE_defparam = 5, RULE_typedefs = 6, RULE_typedef = 7, 
		RULE_vars = 8, RULE_var = 9, RULE_type = 10, RULE_champ = 11, RULE_insts = 12, 
		RULE_inst = 13, RULE_cond = 14, RULE_condterm = 15, RULE_condfact = 16, 
		RULE_bool = 17, RULE_boolunop = 18, RULE_boolbiop = 19, RULE_relop = 20, 
		RULE_affect = 21, RULE_ifcond = 22, RULE_switchCase = 23, RULE_callFunc = 24, 
		RULE_params = 25, RULE_param = 26, RULE_read = 27, RULE_write = 28, RULE_expr = 29, 
		RULE_addop = 30, RULE_term = 31, RULE_mulop = 32, RULE_fact = 33, RULE_integer = 34, 
		RULE_whileDo = 35, RULE_repeatUntil = 36, RULE_forDo = 37, RULE_adresse = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "defprocs", "defproc", "defparams", "defparam", "typedefs", 
			"typedef", "vars", "var", "type", "champ", "insts", "inst", "cond", "condterm", 
			"condfact", "bool", "boolunop", "boolbiop", "relop", "affect", "ifcond", 
			"switchCase", "callFunc", "params", "param", "read", "write", "expr", 
			"addop", "term", "mulop", "fact", "integer", "whileDo", "repeatUntil", 
			"forDo", "adresse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "':'", "'.'", "';'", "'procedure'", "'('", "')'", 
			"'()'", "','", "'var'", "'type'", "'end'", "'='", "'integer'", "'boolean'", 
			"'array'", "'['", "'..'", "']'", "'of'", "'record'", "'begin'", "'!'", 
			"'&&'", "'||'", "'<>'", "'<'", "'>'", "'<='", "'>='", "':='", "'if'", 
			"'then'", "'else'", "'case'", "'read'", "'write'", "'+'", "'-'", "'*'", 
			"'/'", "'while'", "'do'", "'repeat'", "'until'", "'for'", "'to'", "'downto'", 
			"'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "TRUE", "FALSE", "ID", "TYPE", "INT", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private Program prog = new Program();

	/**
	* Lit le programme dans un fichier et le convertit en instruction
	*
	* @return Le programme vérifié
	* @throws SyntaxErrorException
	*/
	public  Program lire() throws SyntaxErrorException {

	    program();

		if (this._syntaxErrors > 0 || prog.HasError()) {
		    prog.printErr();
		    printSymbolTable(this.prog.getSymbolTables());
			throw new SyntaxErrorException();
		}else
		    return prog;
	}

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PascalParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__0);
			setState(79);
			match(ID);
			setState(80);
			match(T__1);
			setState(81);
			block();
			setState(82);
			match(T__2);
			 prog.addPCode(new HLT()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public DefprocsContext x;
		public TypedefsContext typedefs() {
			return getRuleContext(TypedefsContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public InstsContext insts() {
			return getRuleContext(InstsContext.class,0);
		}
		public DefprocsContext defprocs() {
			return getRuleContext(DefprocsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			typedefs();
			setState(86);
			vars();

			    INC inc = new INC(prog.getSizeSymbolsTable());
			    BRN brn = new BRN();
			    prog.addPCode(Arrays.asList(new Instruction[]{inc, brn}));
			    int tmp = prog.getSizeSymbolsTable();

			setState(88);
			((BlockContext)_localctx).x = defprocs();

			    inc.increment(((BlockContext)_localctx).x.size - tmp);
			    brn.setJump(prog.getNbrInstruction());

			setState(90);
			insts();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefprocsContext extends ParserRuleContext {
		public int size;
		public DefprocContext x;
		public List<DefprocContext> defproc() {
			return getRuleContexts(DefprocContext.class);
		}
		public DefprocContext defproc(int i) {
			return getRuleContext(DefprocContext.class,i);
		}
		public DefprocsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defprocs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDefprocs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDefprocs(this);
		}
	}

	public final DefprocsContext defprocs() throws RecognitionException {
		DefprocsContext _localctx = new DefprocsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defprocs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((DefprocsContext)_localctx).size =  prog.getSizeSymbolsTable(); 
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(93);
				((DefprocsContext)_localctx).x = defproc(_localctx.size);
				 _localctx.size += ((DefprocsContext)_localctx).x.size; 
				setState(95);
				match(T__3);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefprocContext extends ParserRuleContext {
		public int shift;
		public Procedure proc;
		public int size;
		public Token ID;
		public DefprocsContext x;
		public TerminalNode ID() { return getToken(PascalParser.ID, 0); }
		public TypedefsContext typedefs() {
			return getRuleContext(TypedefsContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public InstsContext insts() {
			return getRuleContext(InstsContext.class,0);
		}
		public DefprocsContext defprocs() {
			return getRuleContext(DefprocsContext.class,0);
		}
		public DefparamsContext defparams() {
			return getRuleContext(DefparamsContext.class,0);
		}
		public DefprocContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DefprocContext(ParserRuleContext parent, int invokingState, int shift) {
			super(parent, invokingState);
			this.shift = shift;
		}
		@Override public int getRuleIndex() { return RULE_defproc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDefproc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDefproc(this);
		}
	}

	public final DefprocContext defproc(int shift) throws RecognitionException {
		DefprocContext _localctx = new DefprocContext(_ctx, getState(), shift);
		enterRule(_localctx, 6, RULE_defproc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__4);
			setState(103);
			((DefprocContext)_localctx).ID = match(ID);

			((DefprocContext)_localctx).proc =  new Procedure(prog.getNbrInstruction()+1,_localctx.shift);
			    prog.putInTable((((DefprocContext)_localctx).ID!=null?((DefprocContext)_localctx).ID.getText():null),_localctx.proc,PROCEDURE);
			    prog.downLevel((((DefprocContext)_localctx).ID!=null?((DefprocContext)_localctx).ID.getText():null));

			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				{
				setState(105);
				match(T__5);
				setState(106);
				defparams();
				setState(107);
				match(T__6);
				}
				break;
			case T__7:
				{
				setState(109);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(112);
			match(T__1);
			setState(113);
			typedefs();
			setState(114);
			vars();

			    BRN brn = new BRN();
			    prog.addPCode(brn);
			    int tmp = prog.getSizeSymbolsTable();

			setState(116);
			((DefprocContext)_localctx).x = defprocs();
			setState(117);
			insts();

			    prog.addPCode(new RET(prog.getNbrParam((((DefprocContext)_localctx).ID!=null?((DefprocContext)_localctx).ID.getText():null))));
			    brn.setJump(prog.getNbrInstruction());
			    ((DefprocContext)_localctx).size =  prog.getSizeSymbolsTable() + ((DefprocContext)_localctx).x.size - tmp;
			    prog.upLevel();

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefparamsContext extends ParserRuleContext {
		public List<DefparamContext> defparam() {
			return getRuleContexts(DefparamContext.class);
		}
		public DefparamContext defparam(int i) {
			return getRuleContext(DefparamContext.class,i);
		}
		public DefparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDefparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDefparams(this);
		}
	}

	public final DefparamsContext defparams() throws RecognitionException {
		DefparamsContext _localctx = new DefparamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defparams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			defparam();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(121);
				match(T__8);
				setState(122);
				defparam();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefparamContext extends ParserRuleContext {
		public Token ID;
		public TypeContext type;
		public TerminalNode ID() { return getToken(PascalParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDefparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDefparam(this);
		}
	}

	public final DefparamContext defparam() throws RecognitionException {
		DefparamContext _localctx = new DefparamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Parameter param = new Parameter(); 
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				{
				{
				setState(129);
				match(T__9);
				setState(130);
				((DefparamContext)_localctx).ID = match(ID);
				setState(131);
				match(T__1);
				setState(132);
				((DefparamContext)_localctx).type = type();
				 param.setReference(true); 
				}
				}
				break;
			case ID:
				{
				{
				setState(135);
				((DefparamContext)_localctx).ID = match(ID);
				setState(136);
				match(T__1);
				setState(137);
				((DefparamContext)_localctx).type = type();
				 param.setReference(false); 
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}

			    param.setType(((DefparamContext)_localctx).type.t);
			    prog.putInTable((((DefparamContext)_localctx).ID!=null?((DefparamContext)_localctx).ID.getText():null),param,PARAMETER);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefsContext extends ParserRuleContext {
		public List<TypedefContext> typedef() {
			return getRuleContexts(TypedefContext.class);
		}
		public TypedefContext typedef(int i) {
			return getRuleContext(TypedefContext.class,i);
		}
		public TypedefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedefs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterTypedefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitTypedefs(this);
		}
	}

	public final TypedefsContext typedefs() throws RecognitionException {
		TypedefsContext _localctx = new TypedefsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typedefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(144);
				match(T__10);
				setState(145);
				typedef();
				setState(146);
				match(T__11);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public Token x;
		public TypeContext type;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> TYPE() { return getTokens(PascalParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(PascalParser.TYPE, i);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitTypedef(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typedef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				((TypedefContext)_localctx).x = match(TYPE);
				setState(154);
				match(T__12);
				setState(155);
				((TypedefContext)_localctx).type = type();
				 prog.putInTable((((TypedefContext)_localctx).x!=null?((TypedefContext)_localctx).x.getText():null),((TypedefContext)_localctx).type.t,TYPEPERSO);
				setState(157);
				match(T__3);
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitVars(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(163);
				match(T__9);
				setState(164);
				var();
				setState(165);
				match(T__3);
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
